@@ -1,3 +1,9 @@
+2007-09-27  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/commands/base.py: added informational message when using
+	jhbuild run with a bad command name; patch by Callum McKenzie.
+	(closes: #477712)
+
 2007-09-25  Murray Cumming  <murrayc@murrayc.com>
 
 	* modulesets/gnome-2.20.modules:
